--- a/core/package.json
+++ b/core/package.json
@@ -11,7 +11,8 @@
     "async": "^3.2.0",
     "body-parser": "^1.18.2",
     "express": "~4.15.5",
-    "mongoose": "^5.0.3"
+    "mongoose": "^5.0.3",
+    "node-cron": "^2.0.3"
   },
   "author": "hamza",
   "license": "ISC"
