--- a/core/package.json
+++ b/core/package.json
@@ -8,8 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.1.1",
     "async": "^3.2.0",
     "body-parser": "^1.18.2",
+    "dotenv": "^8.2.0",
     "express": "~4.15.5",
     "mongoose": "^5.0.3",
     "node-cron": "^2.0.3"
