list, changes & connectors

--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.1",
+    "axios": "^0.19.2",
     "chart.js": "^2.8.0",
     "clsx": "^1.0.4",
     "history": "^4.9.0",
@@ -38,17 +39,17 @@
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-perfect-scrollbar": "^1.5.3",
+    "react-redux": "7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
     "recompose": "^0.30.0",
-    "underscore": "^1.9.1",
-    "uuid": "^3.3.2",
-    "validate.js": "^0.13.1",
-    "react-redux": "7.1.0",
     "redux": "4.0.4",
     "redux-actions": "2.6.5",
     "redux-logger": "3.0.6",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "underscore": "^1.9.1",
+    "uuid": "^3.3.2",
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
     "eslint-plugin-prettier": "^3.0.1",
