--- a/core/package.json
+++ b/core/package.json
@@ -11,6 +11,7 @@
     "@sendgrid/mail": "^7.1.1",
     "async": "^3.2.0",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "~4.15.5",
     "mongoose": "^5.0.3",
