--- a/core/package.json
+++ b/core/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "~4.15.5",
+    "fast-csv": "^4.3.0",
     "mongoose": "^5.0.3",
+    "multer": "^1.4.2",
     "node-cron": "^2.0.3"
   },
   "author": "hamza",
